# OpenEmpires

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  ai-policy.md  badge.json  create_class.py  normalize_line_endings.py  vcpkg.json
integ-tests/: CMakeLists.txt  IntegTestBase.cpp  IntegTestBase.h  IntegTestTickAssist.cpp  IntegTestTickAssist.h  TestWorldCreator.cpp  TestWorldCreator.h  test_combat.cpp  test_constructions.cpp  test_main.cpp  test_movements.cpp  test_resourceGathering.cpp
src/cpp/: CMakeLists.txt  Version.h.in  main.cpp
src/cpp/aion/: AtlasGenerator.h  AtlasGeneratorBase.h  AtlasGeneratorBasic.h  CMakeLists.txt  CommandCenter.cpp  CommandCenter.h  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Coordinates.cpp  Coordinates.h  ECS.cpp  ECS.h  Event.cpp  Event.h  EventHandler.h  EventListener.h  EventLoop.cpp  EventLoop.h  EventLoopListener.h  EventPublisher.h  FPSCounter.h  FrameData.h  GameSettings.h  GameState.cpp  GameState.h  GraphicInstruction.h  GraphicsLoader.cpp  GraphicsLoader.h  GraphicsRegistry.cpp  GraphicsRegistry.h  InputListener.cpp  InputListener.h  PathFinderAStar.cpp  PathFinderAStar.h  PathFinderBase.h  Renderer.cpp  Renderer.h  ServiceRegistry.h  Simulator.cpp  (+16 more)
src/cpp/aion/commands/: CmdAttack.h  CmdIdle.h  CmdMove.h  CmdWalk.h  Command.h
src/cpp/aion/components/: ActionComponent.h  AnimationComponent.h  CompAction.h  CompAnimation.h  CompBuilding.h  CompDirty.h  CompEntityInfo.h  CompGraphics.cpp  CompGraphics.h  CompRendering.h  CompTransform.h  CompUnit.h  DirtyComponent.h  EntityInfoComponent.h  GraphicsComponent.h  RenderingComponent.h  TransformComponent.h
src/cpp/aion/utils/: Constants.h  Logger.h  ObjectPool.h  Size.h  Types.h  WidthHeight.h
src/cpp/core/: AtlasGenerator.h  AtlasGeneratorBasic.h  BaseUnitFormation.cpp  BaseUnitFormation.h  BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  Color.cpp  Color.h  CommandCenter.cpp  CommandCenter.h  Coordinates.cpp  Coordinates.h  CursorManager.cpp  CursorManager.h  DebugWindow.cpp  DebugWindow.h  DensityGrid.cpp  DensityGrid.h  EntityFactory.h  EntitySelection.h  EntityTypeRegistry.cpp  EntityTypeRegistry.h  Event.h  EventHandler.h  EventLoop.cpp  EventLoop.h  EventPublisher.cpp  EventPublisher.h  FPSCounter.h  Feet.cpp  Feet.h  Flat2DArray.h  FogOfWar.cpp  FogOfWar.h  FrameData.h  GaiaSystem.cpp  GaiaSystem.h  GameSettings.h  GameState.cpp  (+85 more)
src/cpp/core/commands/: CmdAttack.cpp  CmdAttack.h  CmdAttackBase.cpp  CmdAttackBase.h  CmdBuild.cpp  CmdBuild.h  CmdDecayCorpse.h  CmdDie.h  CmdDropResource.h  CmdGarrison.cpp  CmdGarrison.h  CmdGatherResource.cpp  CmdGatherResource.h  CmdIdle.h  CmdMeleeAttack.cpp  CmdMeleeAttack.h  CmdMove.cpp  CmdMove.h  CmdMoveInFormation.cpp  CmdMoveInFormation.h  CmdRangeAttack.cpp  CmdRangeAttack.h  Command.h
src/cpp/core/components/: CompAction.h  CompArmor.h  (+30 more)
src/cpp/drs/: CMakeLists.txt  Color.h  DRSFile.cpp  DRSFile.h  DRSResourceEntry.h  DRSTester.h  Frame.cpp  Frame.h  FrameInfo.h  Palettes.h  SLPFile.cpp  SLPFile.h  libbmp.cpp  libbmp.h
src/cpp/game/: CMakeLists.txt  CompGate.h  ComponentModelMapper.cpp  ComponentModelMapper.h  ComponentRegistrar.cpp  ComponentRegistrar.h  ComponentTypes.h  DRSGraphicsLoader.cpp  DRSGraphicsLoader.h  DRSInterface.cpp  DRSInterface.h  DebugHelper.cpp  DebugHelper.h  DemoWorldCreator.cpp  DemoWorldCreator.h  EntityDefinitionLoader.cpp  EntityDefinitionLoader.h  EntityLoader.cpp  EntityLoader.h  EntityModelLoader.cpp  EntityModelLoader.h  EntityModelLoaderV2.cpp  EntityModelLoaderV2.h  Game.h  GameAPI.cpp  GameAPI.h  GameEngine.cpp  GameEngine.h  GameShortcutResolver.cpp  GameShortcutResolver.h  GameTypes.h  GraphicsLoaderFromDRS.cpp  GraphicsLoaderFromDRS.h  GraphicsLoaderFromImages.cpp  GraphicsLoaderFromImages.h  HUD.cpp  HUD.h  HUDUpdater.cpp  HUDUpdater.h  PlayerActionResolver.cpp  (+10 more)
src/cpp/ion/: AtlasGenerator.h  AtlasGeneratorBasic.h  BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  Color.cpp  Color.h  CommandCenter.cpp  CommandCenter.h  Coordinates.cpp  Coordinates.h  EntityFactory.h  Event.h  EventHandler.h  EventLoop.cpp  EventLoop.h  EventPublisher.cpp  EventPublisher.h  FPSCounter.h  Feet.cpp  Feet.h  Flat2DArray.h  FogOfWar.cpp  FogOfWar.h  FrameData.h  GameSettings.h  GameState.cpp  GameState.h  GraphicAddon.h  GraphicsLoader.h  GraphicsRegistry.cpp  GraphicsRegistry.h  GridMap.h  PathFinderAStar.cpp  PathFinderAStar.h  PathFinderBase.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  (+34 more)
src/cpp/sdl3_gfx/: CMakeLists.txt  SDL3_gfxPrimitives.cpp  SDL3_gfxPrimitives.h  SDL3_gfxPrimitives_font.h  SDL3_rotozoom.cpp  SDL3_rotozoom.h
src/cpp/spice/: CMakeLists.txt  Component.h  ComponentStorage.h  Entity.cpp  Entity.h  EntityComponentMap.cpp  EntityComponentMap.h  EntityFactory.cpp  EntityFactory.h
src/cpp/utils/: CMakeLists.txt  Constants.h  Logger.cpp  Logger.h  ObjectPool.h  Types.h  WidthHeight.h
tests/cpp/: CMakeLists.txt  test_main.cpp
tests/cpp/aion/: test_CommandCenter.cpp  test_ComponentRegistry.cpp  test_Event.cpp  test_EventLoop.cpp  test_GameState.cpp  test_GraphicsRegistry.cpp  test_ObjectPool.cpp  test_PathFinderAStar.cpp  test_ThreadSynchronizer.cpp  test_Viewport.cpp
tests/cpp/core/: TestEventPublisher.h  test_CmdAttack.cpp  test_CommandCenter.cpp  test_ComponentRegistry.cpp  test_DiagnosticContext.cpp  test_Event.cpp  test_EventLoop.cpp  test_FogOfWar.cpp  test_GameState.cpp  test_GraphicsRegistry.cpp  test_LineUnitFormation.cpp  test_Maths.cpp  test_ObjectPool.cpp  test_PassabilityMap.cpp  test_PathFinderAStar.cpp  test_PathService.cpp  test_ThreadSynchronizer.cpp  test_VersionedBucketSorter.cpp  test_Viewport.cpp  test_VisionSystem.cpp  test_ZOrderStrategyByTiles.cpp
tests/cpp/game/: test_EntityDefinitionLoader.cpp  test_EntityModelLoaderV2.cpp
tests/cpp/ion/: test_CommandCenter.cpp  test_ComponentRegistry.cpp  test_Event.cpp  test_EventLoop.cpp  test_GameState.cpp  test_GraphicsRegistry.cpp  test_ObjectPool.cpp  test_PathFinderAStar.cpp  test_ThreadSynchronizer.cpp  test_Viewport.cpp
(+113 files in other folders)
